--- a/style.css
+++ b/style.css
@@ -14,52 +14,59 @@ body {
     width: 100%;
     min-height: 100vh;
     background-color: #04316a;
-    padding: 0px 0%;
+    padding: 0%;
     display: flex;
     flex-direction: column;
+    margin: auto;
 }
 
 nav {
     width: 100%;
-    padding: 10px 5%;
+    padding: 0.5vw 5%;
     display: inline-block;
     align-items: center;
+    vertical-align: middle;
+    margin: 0;
 }
 
 .logo {
-    height: 40px;
+    height: 3.125vw;
     float: left;
 }
 
 nav ul {
     float: right;
+    padding: 0;
+    margin: 0;
 }
 
 nav ul li {
     display: inline-block;
     list-style: none;
-    margin: 10px 15px;
+    margin: 0.78125vw 1.171875vw;
+    padding: 0;
 }
 
 nav ul li a {
     text-decoration: none;
     color: white;
     font-weight: 400;
+    font-size: 1.25vw;
 }
 
 .downloadApp {
     float: right;
-    margin-left: 20px;
+    margin-left: 1.5625vw;
 }
 
 .btn {
     display: inline-block;
     text-decoration: none;
-    padding: 14px 40px;
+    padding: 0.78125vw 3.125vw;
     color: #484B55;
     background-color: #ffbe55;
-    font-size: 14px;
-    border-radius: 30px;
+    font-size: 1.1719vw;
+    border-radius: 2.34375vw;
 }
 
 .headerContent {
@@ -73,27 +80,27 @@ nav ul li a {
 
 .headerDescription {
     width: 50%;
-    padding-top: 150px;
-    padding-left: 10px;
+    padding-top: 11.71875vw;
+    padding-left: 0.78125vw;
     padding-right: 6%;
     float: left;
     text-align: right;
 }
 
 .headerDescription h1 {
-    font-size: 35px;
+    font-size: 2.734375vw;
     color: #00a2ff;
-    line-height: 50px;
+    line-height: 3.90625vw;
     font-weight: 400;
     animation-delay: 0.7s;
 }
 
 .headerDescription p {
-    margin-top: 15px;
-    padding-right: 15px;
+    margin-top: 1.171875vw;
+    padding-right: 1.171875vw;
     color: #4f9da7;
-    font-size: 22px;
-    line-height: 30px;
+    font-size: 1.71875vw;
+    line-height: 2.34375vw;
     animation-delay: 1.4s;
 }
 
@@ -101,21 +108,21 @@ nav ul li a {
     display: inline-block;
     width: 100%;
     background-color: #FFEFDE;
-    margin-top: 60px;
-    padding: 60px 6%;
+    margin-top: 4.6875vw;
+    padding: 4.6875vw 6%;
     color: #4D4B55;
 }
 
 .featureContent h1 {
-    font-size: 80px;
+    font-size: 6.25vw;
     font-weight: 500;
-    line-height: 120px;
+    line-height: 9.375vw;
 }
 
 .featureContent h2 {
-    font-size: 40px;
+    font-size: 3.125vw;
     font-weight: 300;
-    line-height: 60px;
+    line-height: 4.6875vw;
 }
 
 .featureDescription {
@@ -124,31 +131,31 @@ nav ul li a {
 }
 
 .featureDescription h1 {
-    font-size: 80px;
+    font-size: 6.25vw;
     font-weight: 500;
     display: inline;
 }
 
 .featureDescription h2 {
-    font-size: 60px;
+    font-size: 4.6875vw;
     font-weight: 300;
     display: inline;
 }
 
 .featureSeparator {
     width: 100%;
-    height: 80px;
+    height: 6.25vw;
     background-color: #04316a;
     display: inline-block;
 }
 
 .reasonZero {
-    height: 250px;
+    height: 11.71875vw;
     background-color: white;
 }
 
 .reasonZero1 {
-    width: calc(40% - 40px);
+    width: calc(40% - 3.125vw);
     height: 100%;
     background-color: #ffbe55;
     float: left;
@@ -156,112 +163,112 @@ nav ul li a {
 
 .reasonZero1ContentWrapper {
     float: right;
-    margin-top: 50px;
+    margin-top: 3.90625vw;
 }
 
 .reasonZero1ContentWrapper h2 {
-    font-size: 80px;
+    font-size: 6.25vw;
     font-weight: 500;
     color: #484B55;
 }
 
 .reasonZero2 {
-    width: calc(60% + 40px);
+    width: calc(60% + 3.125vw);
     height: 100%;
     background-color: #04316a;
     float: left;
-    border-left: 80px solid #ffbe55;
-    border-bottom: 250px solid transparent;
+    border-left: 6.25vw solid #ffbe55;
+    border-bottom: 19.53125vw solid transparent;
     box-sizing: border-box;
 }
 
 .reasonZero2ContentWrapper {
     float: left;
-    margin-top: 50px;
+    margin-top: 3.90625vw;
     color: white;
-    padding-left: 35px;
+    padding-left: 2.734375vw;
 }
 
 .reasonDescription {
     color: white;
-    padding: 15px 5%;
+    padding: 1.171875vw 5%;
     float: left;
 }
 
 .reasonDescription h1 {
-    font-size: 60px;
+    font-size: 4.6875vw;
     font-weight: 500;
     display: inline;
 }
 
 .reasonDescription h2 {
-    font-size: 40px;
+    font-size: 3.125vw;
     font-weight: 300;
     display: inline;
 }
 
 .reasonDescription1 {
-    width: calc(90% - 320px);
+    width: calc(90% - 25vw);
 }
 
 .reasonKey {
     color: #484B55;
     background-color: #ffbe55;
-    padding-top: 30px;
+    padding-top: 2.34375vw;
 }
 
 .reasonKey1 {
-    width: 320px;
-    height: 320px;
+    width: 25vw;
+    height: 25vw;
     float: left;
     text-align: center;
     margin-right: 10%;
 }
 
 .reasonDescription2 {
-    width: calc(90% - 360px);
+    width: calc(90% - 28.125vw);
 }
 
 .reasonKey2 {
-    width: 360px;
-    height: 360px;
+    width: 28.125vw;
+    height: 28.125vw;
     float: left;
     text-align: center;
     margin-left: 10%;
 }
 
 .reasonDescription3 {
-    width: calc(90% - 320px);
+    width: calc(90% - 25vw);
 }
 
 .reasonKey3 {
-    width: 320px;
-    height: 320px;
+    width: 25vw;
+    height: 25vw;
     float: left;
     text-align: center;
     margin-right: 10%;
 }
 
 .reasonDescription4 {
-    width: calc(90% - 470px);
+    width: calc(90% - 36.71875vw);
 }
 
 .reasonKey4 {
-    width: 470px;
-    height: 470px;
+    width: 36.71875vw;
+    height: 36.71875vw;
     float: left;
     text-align: left;
     margin-left: 10%;
-    padding-left: 16px;
+    padding-left: 1.25vw;
 }
 
 .reasonDescription5 {
-    width: calc(90% - 320px);
+    width: calc(90% - 25vw);
 }
 
 .reasonKey5 {
-    width: 320px;
-    height: 320px;
+    width: 25vw;
+    height: 25vw;
     float: left;
     text-align: center;
     margin-right: 10%;
@@ -269,7 +276,7 @@ nav ul li a {
 
 .footer {
     width: 100%;
-    padding: 40px 10%;
+    padding: 3.125vw 10%;
     margin-top: auto;
     color: white;
     background-color: #4D4B55;
@@ -280,17 +287,67 @@ nav ul li a {
     line-height: 150%;
 }
 
-.privacyPolicyHeader {
-    padding: 20px 6%;
+.privacyPolicyWrapper {
+    display: block;
+    padding: 1.5625vw 10%;
+    text-align: justify;
+    text-justify: inter-word;
+    padding-top: 50px;
 }
+
+.privacyPolicyHeader h1 {
+    color: white;
+    font-size: 26px;
+    font-weight: 300;
+}
+
 
 .privacyPolicyHeader h3 {
     color: white;
-    font-weight: 200;
+    font-size: 16px;
+    font-weight: 300;
 }
 
-.privacyPolicyHeader p {
-    color: #00a2ff;
+.level1 {
+    color: #ffffff;
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+
+.level2 {
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.level3 {
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.textContent {
+    color: #ABA9BB;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.5;
+}
+
+.textContent a:link {
+    color: #ffffff;
+}
+
+.textContent a:visited {
+    color: #ffffff;
+}
+
+.textContent a:hover {
+    color: #00A2FF;
+}
+
+.textContent a:active {
+    color: #00A2FF;
 }
 
 .initialAnimation1 {
@@ -308,7 +365,7 @@ nav ul li a {
 
 .initialAnimation2 {
     opacity: 0;
-    transform: translateX(70px);
+    transform: translateX(5.46875vw);
     animation: moveLeft1 0.5s linear forwards;
 }
 
@@ -321,7 +378,7 @@ nav ul li a {
 
 .hidden1 {
     opacity: 0;
-    transform: translateX(70px);
+    transform: translateX(5.46875vw);
     transition: all 1s;
 }
 
@@ -331,7 +388,7 @@ nav ul li a {
 }
 
 .hidden2 {
-    transform: translateX(-100px);
+    transform: translateX(-7.8125vw);
     transition: all 0.2s;
 }
 
@@ -340,7 +397,7 @@ nav ul li a {
 }
 
 .hidden3 {
-    transform: translateX(100px);
+    transform: translateX(7.8125vw);
     transition: all 0.2s;
 }
 
