--- a/styleMobile.css
+++ b/styleMobile.css
@@ -15,14 +15,14 @@
     top: 0;
     z-index: 2;
     width: 100%;
-    padding: 2vw 5%;
+    padding: 4vw 5%;
     display: inline-block;
     align-items: center;
     vertical-align: middle;
     margin: 0;
     font-size: 1vw;
     background-color: #04316a;
-    height: 11vw;
+    height: 15vw;
 }
 
 .mobile .logo {
@@ -50,10 +50,10 @@
 
 .mobile #sideNavBarrier {
     height: 100%;
-    width: 55%;
+    width: 30%;
     position: fixed;
     z-index: 1;
-    top: 11vw;
+    top: 15vw;
     left: 0;
     background-color: #818181;
     opacity: 0;
@@ -65,20 +65,21 @@
     width: 0%;
     position: fixed;
     z-index: 1;
-    top: 11vw;
+    top: 15vw;
     right: 0;
     background-color: #10305A;
     overflow-x: hidden;
     transition: 0.5s;
-    padding-top: 5vw;
+    padding-top: 10vw;
 }
 
 .mobile .sidenav a {
     width: 100%;
-    padding: 0vw 5vw 5vw 5vw;
+    padding: 0vw 10vw 10vw 10vw;
     text-decoration: none;
     text-align: right;
-    font-size: 4vw;
+    font-size: 6vw;
+    font-weight: 400;
     color: #4f9da7;
     display: block;
     transition: 0.3s;
@@ -158,7 +159,7 @@
 }
 
 .mobile .featureContent h2 {
-    font-size: 4vw;
+    font-size: 6vw;
     font-weight: 200;
     line-height: 4.6875vw;
     position: relative;
@@ -166,7 +167,7 @@
 }
 
 .mobile .featureContent h1 {
-    font-size: 8vw;
+    font-size: 9vw;
     font-weight: 500;
     line-height: 9.375vw;
     position: relative;
@@ -233,92 +234,92 @@
 
 .mobile .featureSeparator {
     width: 100%;
-    height: 10vw;
+    height: 15vw;
     background-color: #04316a;
     display: inline-block;
 }
 
 .mobile .reasonDescription {
     color: white;
-    padding: 1.171875vw 5%;
+    padding: 1.171875vw 0vw 1.171875vw 5vw;
     float: left;
 }
 
 .mobile .reasonDescription h1 {
-    font-size: 4.6875vw;
+    font-size: 7vw;
     font-weight: 500;
     display: inline;
 }
 
 .mobile .reasonDescription h2 {
-    font-size: 3.125vw;
+    font-size: 5vw;
     font-weight: 300;
     display: inline;
-}
-
-.mobile .reasonDescription1 {
-    width: calc(90% - 25vw);
 }
 
 .mobile .reasonKey {
     color: #484B55;
     background-color: #ffbe55;
-    padding-top: 2.34375vw;
+    padding-top: 4.5vw;
+}
+
+.mobile .reasonDescription1 {
+    width: 65vw;
 }
 
 .mobile .reasonKey1 {
-    width: 25vw;
-    height: 25vw;
-    float: left;
+    width: 30vw;
+    height: 30vw;
+    float: right;
     text-align: center;
-    margin-right: 10%;
+    margin-top: 3.8vw;
 }
 
 .mobile .reasonDescription2 {
-    width: calc(90% - 28.125vw);
+    width: 60vw;
 }
 
 .mobile .reasonKey2 {
-    width: 28.125vw;
-    height: 28.125vw;
+    width: 35vw;
+    height: 35vw;
     float: left;
     text-align: center;
-    margin-left: 10%;
+    margin-top: 3.8vw;
 }
 
 .mobile .reasonDescription3 {
-    width: calc(90% - 25vw);
+    width: 65vw;
 }
 
 .mobile .reasonKey3 {
-    width: 25vw;
-    height: 25vw;
-    float: left;
+    width: 30vw;
+    height: 30vw;
+    float: right;
     text-align: center;
-    margin-right: 10%;
+    margin-top: 3.8vw;
 }
 
 .mobile .reasonDescription4 {
-    width: calc(90% - 36.71875vw);
+    width: 56vw;
 }
 
 .mobile .reasonKey4 {
-    width: 36.71875vw;
-    height: 36.71875vw;
+    width: 39vw;
+    height: 39vw;
     float: left;
     text-align: left;
-    margin-left: 10%;
-    padding-left: 1.25vw;
+    padding-left: 1.75vw;
+    margin-top: 3.8vw;
 }
 
 .mobile .reasonDescription5 {
-    width: calc(90% - 25vw);
+    width: 65vw;
 }
 
 .mobile .reasonKey5 {
-    width: 25vw;
-    height: 25vw;
-    float: left;
+    width: 30vw;
+    height: 30vw;
+    float: right;
     text-align: center;
-    margin-right: 10%;
+    margin-top: 3.8vw;
 }
