--- a/styleMobile.css
+++ b/styleMobile.css
@@ -25,37 +25,53 @@
     height: 15vw;
 }
 
-.mobile .logo {
+.mobile nav .logo {
     height: 7vw;
     float: left;
 }
 
-.mobile nav .menuButton {
-    float: right;
-    cursor: pointer;
+.mobile .menuButtonContainer {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding: 4vw 5%;
+    display: block;
+    align-items: center;
+    margin: 0;
+    font-size: 1vw;
+    height: 15vw;
     color: #ffffff;
+    z-index: 4;
+}
+
+.mobile .menuButton {
+    width: 4vw;
+    height: 4vw;
+    cursor: pointer;
+    background-position: center;
+    background-size: cover;
+    margin: 1.5vw 0vw;
 }
 
 .mobile #menuButton {
-    font-size: 8vw;
-    line-height: 5vw;
     display: block;
+    float: right;
+    background-image: url("images/menuButton.png");
 }
 
 .mobile #closeButton {
-    font-size: 5vw;
-    line-height: 6.8vw;
     display: none;
+    float: right;
+    background-image: url("images/closeButton.png");
 }
 
 .mobile #sideNavBarrier {
     height: 100%;
     width: 30%;
     position: fixed;
-    z-index: 1;
-    top: 15vw;
+    z-index: 4;
+    top: 0;
     left: 0;
-    background-color: #818181;
     opacity: 0;
     display: none;
 }
@@ -64,13 +80,13 @@
     height: 100%;
     width: 0%;
     position: fixed;
-    z-index: 1;
-    top: 15vw;
+    z-index: 2;
+    top: 0;
     right: 0;
     background-color: #10305A;
     overflow-x: hidden;
     transition: 0.5s;
-    padding-top: 10vw;
+    padding-top: 20vw;
 }
 
 .mobile .sidenav a {
@@ -92,7 +108,7 @@
 .mobile .header-img {
     width: 100%;
     float: left;
-    margin-top: 11vw;
+    margin-top: 15vw;
 }
 
 .mobile .headerDescription {
@@ -103,7 +119,7 @@
 }
 
 .mobile .headerDescription h1 {
-    font-size: 5vw;
+    font-size: 5.2vw;
     color: #00a2ff;
     line-height: 6.2vw;
     font-weight: 400;
@@ -112,7 +128,7 @@
 .mobile .headerDescription p {
     margin-top: 1.5vw;
     color: #4f9da7;
-    font-size: 3.5vw;
+    font-size: 3.8vw;
     line-height: 4.7vw;
 }
 
@@ -126,7 +142,7 @@
 .mobile .playStoreImage {
     display: inline-block;
     text-decoration: none;
-    width: 40vw;
+    width: 48vw;
 }
 
 .mobile .featureContent {
@@ -161,7 +177,7 @@
 .mobile .featureContent h2 {
     font-size: 6vw;
     font-weight: 200;
-    line-height: 4.6875vw;
+    line-height: 5.5vw;
     position: relative;
     top: 7vw;
 }
@@ -181,13 +197,13 @@
 }
 
 .mobile .featureDescription h1 {
-    font-size: 6.25vw;
+    font-size: 7vw;
     font-weight: 500;
     display: inline;
 }
 
 .mobile .featureDescription h2 {
-    font-size: 4.6875vw;
+    font-size: 5vw;
     font-weight: 300;
     display: inline;
 }
@@ -206,7 +222,7 @@
 
 .mobile .reasonZero1ContentWrapper {
     float: right;
-    margin-top: 3.90625vw;
+    margin-top: 4vw;
 }
 
 .mobile .reasonZero1ContentWrapper h2 {
@@ -227,14 +243,15 @@
 
 .mobile .reasonZero2ContentWrapper {
     float: left;
-    margin-top: 3.90625vw;
+    margin-top: 4vw;
     color: white;
     padding-left: 2.734375vw;
+    padding-top: 0.8vw;
 }
 
 .mobile .featureSeparator {
     width: 100%;
-    height: 15vw;
+    height: 18vw;
     background-color: #04316a;
     display: inline-block;
 }
@@ -264,24 +281,24 @@
 }
 
 .mobile .reasonDescription1 {
-    width: 65vw;
+    width: 61vw;
 }
 
 .mobile .reasonKey1 {
-    width: 30vw;
-    height: 30vw;
+    width: 34vw;
+    height: 34vw;
     float: right;
     text-align: center;
     margin-top: 3.8vw;
 }
 
 .mobile .reasonDescription2 {
-    width: 60vw;
+    width: 55vw;
 }
 
 .mobile .reasonKey2 {
-    width: 35vw;
-    height: 35vw;
+    width: 40vw;
+    height: 40vw;
     float: left;
     text-align: center;
     margin-top: 3.8vw;
@@ -300,25 +317,25 @@
 }
 
 .mobile .reasonDescription4 {
-    width: 56vw;
+    width: 54vw;
 }
 
 .mobile .reasonKey4 {
-    width: 39vw;
-    height: 39vw;
+    width: 41vw;
+    height: 41vw;
     float: left;
     text-align: left;
-    padding-left: 1.75vw;
+    padding-left: 1.7vw;
     margin-top: 3.8vw;
 }
 
 .mobile .reasonDescription5 {
-    width: 65vw;
+    width: 63vw;
 }
 
 .mobile .reasonKey5 {
-    width: 30vw;
-    height: 30vw;
+    width: 32vw;
+    height: 32vw;
     float: right;
     text-align: center;
     margin-top: 3.8vw;
