--- a/style.css
+++ b/style.css
@@ -239,6 +239,7 @@ body {
     margin-top: 4vw;
     color: white;
     padding-left: 2.734375vw;
+    padding-top: 0.8vw;
 }
 
 .computer .reasonDescription {
