--- a/styleMobile.css
+++ b/styleMobile.css
@@ -32,6 +32,7 @@
     font-size: 1vw;
     background-color: #04316a;
     height: 15vw;
+    box-shadow: 0 0px 1vw 0.5vw rgba(0, 0, 0, 0.19);
 }
 
 .mobile nav .logo {
@@ -114,8 +115,7 @@
 
 .mobile .sidenav a:hover {
     color: #00a2ff;
-  }
-
+}
 
 
 .mobile .header-img {
@@ -162,7 +162,7 @@
     display: inline-block;
     width: 100%;
     height: 50vw;
-    background-color: #FFEFDE;
+    background-color: #fcdebf;
     padding-left: 7vw;
     color: #4D4B55;
 }
