--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 2;
+    z-index: 20;
     box-shadow: 0 0px 0.5vw 0.25vw rgba(0, 0, 0, 0.19);
 }
 
@@ -105,7 +105,7 @@ body {
 
 .computer .headerDescription {
     width: 50%;
-    padding-top: 11.71875vw;
+    padding-top: 3vw;
     padding-left: 0.78125vw;
     padding-right: 6%;
     float: left;
@@ -127,6 +127,55 @@ body {
     font-size: 1.71875vw;
     line-height: 2.34375vw;
     animation-delay: 1.4s;
+}
+
+.computer .screenShotsContainer {
+    position: relative;
+    width: 50%;
+    min-height: 50vw;
+    float: right;
+    display: block;
+    text-align: left;
+    z-index: 5;
+}
+
+.computer .screenShots {
+    display: inline-block;
+    position: absolute;
+    height: 40vw;
+    margin-top: 4vw;
+    border-radius: 20px;
+    box-shadow: 0 0px 0.75vw 0.5vw rgba(0, 0, 0, 0.15);
+}
+
+.screenShot1 {
+    margin-left: 40%;
+    scale: 1.0;
+    z-index: 10;
+}
+
+.screenShot2 {
+    margin-left: 22%;
+    scale: 0.85;
+    z-index: 9;
+}
+
+.screenShot3 {
+    margin-left: 10%;
+    scale: 0.7;
+    z-index: 8;
+}
+
+.screenShot4 {
+    margin-left: 63%;
+    scale: 0.7;
+    z-index: 8;
+}
+
+.screenShot5 {
+    margin-left: 53%;
+    scale: 0.85;
+    z-index: 9;
 }
 
 .computer .featureContent {
