Minor update in footer

--- a/style.css
+++ b/style.css
@@ -483,7 +483,7 @@ body {
     font-size: 16px;
     font-weight: 450;
     line-height: 100%;
-    color: #00A2FF;
+    color: #ffbe55;
 }
 
 .footer h4 {
