--- a/style.css
+++ b/style.css
@@ -38,8 +38,8 @@ body {
 
 .computer nav {
     width: 100%;
-    height: 4.5vw;
-    padding: 0.75vw 5%;
+    height: 4.2vw;
+    padding: 0.60vw 5%;
     display: inline-block;
     align-items: center;
     vertical-align: middle;
@@ -95,7 +95,7 @@ body {
 
 .computer .headerContent {
     display: block;
-    margin-top: 4.5vw;
+    margin-top: 4.2vw;
 }
 
 .computer .header-img {
@@ -510,7 +510,6 @@ body {
     font-weight: 300;
 }
 
-
 .privacyPolicyHeader h3 {
     color: white;
     font-size: 16px;
@@ -584,17 +583,23 @@ body {
     width: 30vw;
     height: 30vw;
     margin: 5vw 5vw 5vw 0;
+    padding: 1.8vw;
     border-radius: 50%;
-    box-shadow: 0 0px 0.75vw 0.5vw rgba(0, 0, 0, 0.15);
+    box-shadow: 0.125vw 0.1vw 0.75vw 0.5vw rgba(0, 0, 0, 0.15);
 }
 
 .foundersNote {
     float: left;
     margin: 15vw 0vw 5vw 1vw;
-    width: 41vw;
-    padding: 3vw;
-    box-shadow: 0 0px 0.75vw 0.5vw rgba(0, 0, 0, 0.15);
-    border-radius: 1vw;
+    width: 40vw;
+    padding: 4vw;
+    border-radius: 2vw;
+    border: 1px solid #4f9da7;
+    font-size: 20px;
+    font-weight: 200;
+    line-height: 175%;
+    text-align: left;
+    color: #fcdebf;
 }
 
 @keyframes scale1 {
