--- a/style.css
+++ b/style.css
@@ -595,7 +595,7 @@ body {
     padding: 4vw;
     border-radius: 2vw;
     border: 1px solid #4f9da7;
-    font-size: 20px;
+    font-size: 1.5vw;
     font-weight: 200;
     line-height: 175%;
     text-align: left;
