Minor padding update

--- a/style.css
+++ b/style.css
@@ -590,9 +590,9 @@ body {
 
 .foundersNote {
     float: left;
-    margin: 15vw 0vw 5vw 1vw;
+    margin: 16.1vw 0vw 5vw 1vw;
     width: 40vw;
-    padding: 4vw;
+    padding: 2.8vw 4vw;
     border-radius: 2vw;
     border: 1px solid #4f9da7;
     font-size: 1.5vw;
