--- a/style.css
+++ b/style.css
@@ -560,13 +560,25 @@ body {
     color: #00A2FF;
 }
 
-.information {
-    color: #ABA9BB;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.5;
-    text-align: justify;
+@media only screen and (min-width:1000px) {
+    .information {
+        color: #ABA9BB;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.5;
+        text-align: justify;
+    }
 }
+
+@media only screen and (max-width:1000px) {
+    .information {
+        color: #ABA9BB;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.5;
+        text-align: justify;
+    }
+}    
 
 .initialAnimation1 {
     opacity: 0;
@@ -579,22 +591,44 @@ body {
     display: inline-block;
 }
 
-.textAvatar {
-    float: left;
-    padding: 3vw;
-    margin: 5vw 5vw 5vw 2.5vw;
-    border-radius: 50%;
-    box-shadow: 0.125vw 0.1vw 0.75vw 0.5vw rgba(0, 0, 0, 0.15);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    color: #ffbe55;
-    font-size: 3.2vw;
-    font-weight: 200;
-    line-height: 120%;
-    width: 23vw;
-    height: 23vw;
+@media only screen and (min-width:1000px) {
+    .textAvatar {
+        float: left;
+        padding: 3vw;
+        margin: 5vw 5vw 5vw 2.5vw;
+        border-radius: 50%;
+        box-shadow: 0.125vw 0.1vw 0.75vw 0.5vw rgba(0, 0, 0, 0.15);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        color: #ffbe55;
+        font-size: 3.2vw;
+        font-weight: 200;
+        line-height: 120%;
+        width: 23vw;
+        height: 23vw;
+    }
+}
+
+@media only screen and (max-width:1000px) {
+    .textAvatar {
+        float: left;
+        width: 60vw;
+        height: 60vw;
+        padding: 3vw;
+        margin: 5vw 5vw 0vw 2.5vw;
+        border-radius: 50%;
+        box-shadow: 0.125vw 0.1vw 0.75vw 0.5vw rgba(0, 0, 0, 0.15);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        color: #ffbe55;
+        font-size: 9vw;
+        font-weight: 300;
+        line-height: 120%;
+    }
 }
 
 .aboutAvatarText {
@@ -620,19 +654,38 @@ body {
     margin-top: 14vw;
 }
 
-.avatarSideText {
-    float: left;
-    margin-bottom: 5vw;
-    width: 40vw;
-    padding: 2.4vw 1vw 8vw 3vw;
-    border-radius: 2vw 0 0 0;
-    border-left: 1px solid #4f9da7;
-    border-top: 1px solid #4f9da7;
-    font-size: 1.5vw;
-    font-weight: 200;
-    line-height: 175%;
-    text-align: left;
-    color: #fcdebf;
+@media only screen and (min-width:1000px) {
+    .avatarSideText {
+        float: left;
+        margin-bottom: 5vw;
+        width: 40vw;
+        padding: 2.4vw 1vw 8vw 3vw;
+        border-radius: 2vw 0 0 0;
+        border-left: 1px solid #4f9da7;
+        border-top: 1px solid #4f9da7;
+        font-size: 1.5vw;
+        font-weight: 200;
+        line-height: 175%;
+        text-align: left;
+        color: #fcdebf;
+    }
+}
+
+@media only screen and (max-width:1000px) {
+    .avatarSideText {
+        float: right;
+        margin: 10vw 2vw 15vw 0;
+        width: 70vw;
+        padding: 5vw 2vw 10vw 6vw;
+        border-radius: 5vw 0 0 0;
+        border-left: 1px solid #4f9da7;
+        border-top: 1px solid #4f9da7;
+        font-size: 3vw;
+        font-weight: 200;
+        line-height: 175%;
+        text-align: left;
+        color: #fcdebf;
+    }
 }
 
 .aboutAvatarText .information {
